Backend 100% solo faltan detalles esteticos pero de aqui en adelante ya es funcional completo con seguridad jwt, dto, service, controller, repositori etc.