@@ -3,14 +3,14 @@ import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
-
 import org.springframework.web.filter.OncePerRequestFilter;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.stereotype.Component;
 import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 @Component
 public class JwtFilter extends OncePerRequestFilter {
     private final JwtUtil jwtUtil;
@@ -20,18 +20,25 @@ public class JwtFilter extends OncePerRequestFilter {
     //verificar si existe el toke y si es valido
     @Override
     protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain) throws ServletException, IOException {
+        
         String authHeader = request.getHeader("Authorization");
         if (authHeader != null && authHeader.startsWith("Bearer ")) {
             String token = authHeader.substring(7);
-            // Validar el token y extraer el email
-            if (jwtUtil.validateToken(token)) {
-               response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
-               String email = jwtUtil.extractEmail(token);
-            UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken(email, null, Collections.emptyList());
-             // Aquí podrías extraer el email y establecerlo en el contexto de seguridad si lo deseas
-            SecurityContextHolder.getContext().setAuthentication(authentication);
+
+          if (jwtUtil.validateToken(token)) {
+             String email = jwtUtil.extractEmail(token);
+             String role = jwtUtil.extractRole(token);
+
+            UsernamePasswordAuthenticationToken auth =
+                new UsernamePasswordAuthenticationToken(
+                email,
+                null,
+                List.of(new SimpleGrantedAuthority("ROLE_" + role))
+        );
+        SecurityContextHolder.getContext().setAuthentication(auth);
             }
         }
         filterChain.doFilter(request, response);
     }
+    
 }
